// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryItem renders correctly for level DEFAULT 1`] = `
<TouchableOpacity
  style={
    [
      {
        "backgroundColor": "#FFFCFA",
        "borderRadius": 12,
        "width": "100%",
      },
      {
        "borderWidth": 1,
      },
      {
        "borderColor": "#9F8C82",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 12,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      }
    }
  >
    <View>
      <PeachText
        style={
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          }
        }
      >
        title
      </PeachText>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <PeachText
          style={
            {
              "color": "#7D675E",
              "fontSize": 14,
            }
          }
        >
          sep 15th, 2022
        </PeachText>
      </View>
    </View>
    <View>
      <SatsFormat
        sats={100000}
      />
      <PriceFormat
        amount={100}
        currency="EUR"
        style={
          {
            "color": "#7D675E",
            "textAlign": "right",
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`SummaryItem renders correctly for level DEFAULT with action 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
  style={
    [
      {
        "backgroundColor": "#FFFCFA",
        "borderRadius": 12,
        "width": "100%",
      },
      {
        "borderWidth": 1,
      },
      {
        "borderColor": "#9F8C82",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 12,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      }
    }
  >
    <View>
      <PeachText
        style={
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          }
        }
      >
        title
      </PeachText>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <PeachText
          style={
            {
              "color": "#7D675E",
              "fontSize": 14,
            }
          }
        >
          sep 15th, 2022
        </PeachText>
      </View>
    </View>
    <View>
      <SatsFormat
        sats={100000}
      />
      <PriceFormat
        amount={100}
        currency="EUR"
        style={
          {
            "color": "#7D675E",
            "textAlign": "right",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 8,
          "paddingTop": 8,
        },
        {
          "backgroundColor": "#9F8C82",
        },
      ]
    }
  >
    <Icon
      color="#FFFCFA"
      id="xCircle"
      style={
        {
          "marginRight": 4,
          "marginTop": -2,
          "width": 16,
        }
      }
    />
    <PeachText
      style={
        [
          {
            "fontWeight": "600",
          },
          {
            "color": "#FFFCFA",
          },
        ]
      }
    >
      action
    </PeachText>
  </View>
</TouchableOpacity>
`;
